zefin-user-data-intake-system/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: kong
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    konghq.com/plugins: prometheus
  name: zefin-user-data-intake-system
  namespace: zefin
spec:
  tls:
  - secretName: zefin-user-data-intake-system-tls
    hosts:
    - zefin-dev.zebrands.mx
  rules:
    - host: zefin-dev.zebrands.mx
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: zefin-user-data-intake-system
              port:
                number: 80  
        #- path: /
        #  pathType: Prefix
        #  backend:
        #    service:
        #      name: zefin-user-data-intake-system
        #      port:
        #        number: 80
